Ajustando estilização do painel administrativo

--- a/django/ediaristas_django/web/templates/form_diarista.html
+++ b/django/ediaristas_django/web/templates/form_diarista.html
@@ -9,6 +9,6 @@
         <!-- as_p = exibe o formulário no formato de parágrafo -->
         {{form_diarista|crispy}}
 
-        <button type="submit" class="btn btn-primary">Cadastrar</button>
+        <button type="submit" class="btn btn-secondary mt-4 mb-4" style="background-color: #02E7D9; border-color: #02E7D9">Cadastrar</button>
     </form>
 {% endblock conteudo %}
