--- a/django/ediaristas_django/web/templates/lista_diaristas.html
+++ b/django/ediaristas_django/web/templates/lista_diaristas.html
@@ -2,7 +2,7 @@
 {% load easy_mask %}
 
 {% block conteudo %}
-  <table class="table">
+  <table class="table mb-4">
     <thead>
       <tr>
         <th>#</th>
@@ -29,5 +29,5 @@
     </tbody>
   </table>
 
-  <a href="{% url 'cadastrar_diarista' %}" class="btn btn-primary">Cadastrar</a>
+  <a href="{% url 'cadastrar_diarista' %}" class="btn btn-secondary" style="background-color: #02E7D9; border-color: #02E7D9">Cadastrar</a>
 {% endblock conteudo %}
