--- a/django/ediaristas_django/web/templates/base.html
+++ b/django/ediaristas_django/web/templates/base.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark md-4">
-        <a href="#" class="navbar-brand">E-diaristas</a>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark md-4 mb-4" style="padding-left: 2%; background-color: #9661ff !important">
+        <a href="#" class="navbar-brand">Painel Administrativo</a>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
